# gallerizer-cli-gd

./: CMakeLists.txt  README.md
src/: batch-resize.cpp  console.cpp  gallerizer.cpp  image.cpp  process.cpp
src/include/: console.h  image.h  process.h
